--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,10 @@
 language: node_js
 node_js:
   - "4.1"
+notifications:
+  webhooks:
+    urls:
+      - https://webhooks.gitter.im/e/948e9f2135dd5f68508e
+    on_success: change
+    on_failure: always
+    on_start: never
