--- a/package.json
+++ b/package.json
@@ -27,15 +27,15 @@
     "javascript"
   ],
   "dependencies": {
-    "lodash": "^3.10.0",
-    "nunjucks": "^3.0.0",
-    "plugin-error": "^0.1.2",
+    "lodash": "^4.17.5",
+    "nunjucks": "^3.1.2",
+    "plugin-error": "^1.0.1",
     "replace-ext": "^1.0.0",
-    "through2": "~0.4.0"
+    "through2": "^2.0.3"
   },
   "devDependencies": {
-    "mocha": "^2.1.0",
-    "should": "^5.0.1",
+    "mocha": "^3.5.3",
+    "should": "^13.2.1",
     "vinyl": "^2.1.0"
   },
   "readmeFilename": "readme.md",
